# PeerBeam

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORTED_VERSIONS.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ANDROID.md  API.md  API_REVIEW.md  ARCHITECTURE.md  BENCHMARKS.md  BETA_READINESS.md  BUILD.md  CLI.md  CLIPBOARD.md  COMPATIBILITY_MATRIX.md  CONTRIBUTOR_EXPERIENCE.md  DESIGN_DECISIONS.md  DESKTOP.md  DEVELOPER_GUIDE.md  DEVICES.md  DISCOVERY.md  DOCUMENTATION_AUDIT.md  FEATURE_ROADMAP.md  FFI.md  FINAL_AUDIT.md  FINAL_COMPATIBILITY_MATRIX.md  FINAL_PERFORMANCE_REVIEW.md  FINAL_SECURITY_REVIEW.md  INSTALL.md  KNOWN_ISSUES.md  KNOWN_UI_LIMITATIONS.md  LONG_TERM_ROADMAP.md  MIGRATION.md  NETWORKING.md  NETWORK_TESTING.md  OPEN_SOURCE_READINESS.md  PERFORMANCE_REPORT.md  RELEASE.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.2.3.md  RELEASE_NOTES_v0.2.4.md  RELEASE_NOTES_v1.0.md  SECURITY.md  (+10 more)
docs/superpowers/plans/: 2026-07-15-stacking-selection-tray.md
docs/superpowers/specs/: 2026-07-15-stacking-selection-tray-design.md
examples/: README.md
flutter/: README.md  pubspec.yaml
flutter/android/: key.properties.example
flutter/android/app/: build.gradle.kts  proguard-rules.pro
flutter/assets/fonts/: README.md
flutter/lib/: main.dart
flutter/lib/app/: router.dart  shell.dart  theme.dart
flutter/lib/data/: discovery_repository.dart  history_repository.dart  saved_devices_repository.dart  transfer_repository.dart  trust_repository.dart
flutter/lib/platform/: android_integration.dart  bridge.dart  desktop_files.dart  engine_config.dart  notifications.dart  open_path.dart  saf.dart  services.dart  shared_item.dart
flutter/lib/sdk/: error_text.dart  events.dart  exceptions.dart  models.dart  peerbeam.dart
flutter/lib/state/: app_scope.dart  models.dart  staging.dart  stores.dart
flutter/lib/widgets/: appear.dart  brand_mark.dart  common.dart  device_tile.dart  processing.dart  quick_action.dart  (+1 more)
flutter/linux/: CMakeLists.txt
flutter/test/: android_platform_test.dart  desktop_test.dart  drop_zone_test.dart  home_selection_test.dart  regression_test.dart  send_staged_test.dart  send_text_test.dart  staging_test.dart  ux_test.dart  widget_test.dart
flutter/windows/: CMakeLists.txt
packaging/linux/: peerbeam.desktop
rust/: Cargo.toml
rust/bins/peerbeam-cli/: Cargo.toml
rust/bins/peerbeam-cli/examples/: quic_transfer.rs
rust/bins/peerbeam-cli/src/: cli.rs  commands.rs  engine.rs  exit.rs  history.rs  lib.rs  main.rs  output.rs  prompt.rs  resolve.rs
rust/bins/peerbeam-cli/tests/: cli_parse.rs  config_cli.rs  transfer_e2e.rs
rust/crates/peerbeam-app/: Cargo.toml
rust/crates/peerbeam-app/src/: device_store.rs  discovery.rs  lib.rs  registry.rs
rust/crates/peerbeam-app/tests/: merge.rs
rust/crates/peerbeam-clipboard-mem/: Cargo.toml
rust/crates/peerbeam-clipboard-mem/src/: lib.rs
rust/crates/peerbeam-config/: Cargo.toml
rust/crates/peerbeam-config/src/: lib.rs
rust/crates/peerbeam-config/tests/: config.rs
rust/crates/peerbeam-crypto/: Cargo.toml
rust/crates/peerbeam-crypto/src/: lib.rs
rust/crates/peerbeam-discovery-mdns/: Cargo.toml
rust/crates/peerbeam-discovery-mdns/src/: lib.rs
rust/crates/peerbeam-discovery-mdns/tests/: lifecycle.rs
rust/crates/peerbeam-discovery-tailscale/: Cargo.toml
rust/crates/peerbeam-discovery-tailscale/src/: lib.rs  source.rs  status.rs
rust/crates/peerbeam-discovery-tailscale/tests/: discovery.rs
rust/crates/peerbeam-discovery-udp/: Cargo.toml
rust/crates/peerbeam-discovery-udp/src/: lib.rs  peers.rs  proto.rs
rust/crates/peerbeam-discovery-udp/tests/: loopback.rs
rust/crates/peerbeam-domain/: Cargo.toml
rust/crates/peerbeam-domain/src/: error.rs  event.rs  id.rs  lib.rs
rust/crates/peerbeam-domain/src/entity/: clipboard.rs  device.rs  managed_device.rs  mod.rs  route.rs  transfer.rs  trust.rs
rust/crates/peerbeam-domain/src/port/: clipboard.rs  compression.rs  discovery.rs  encryption.rs  mod.rs  notification.rs  reliability.rs  route.rs  storage.rs  transfer.rs  trust.rs
rust/crates/peerbeam-engine/: Cargo.toml
rust/crates/peerbeam-engine/src/: builder.rs  device_manager.rs  engine.rs  error.rs  lib.rs  route_classifier.rs  route_manager.rs
rust/crates/peerbeam-engine/tests/: discovery_merge.rs  foundation.rs  route_manager.rs
rust/crates/peerbeam-ffi/: Cargo.toml
rust/crates/peerbeam-ffi/src/: clipboard.rs  dto.rs  error.rs  events.rs  lib.rs  logs.rs  runtime.rs  settings.rs  status.rs  transfer.rs
rust/crates/peerbeam-ffi/tests/: ffi.rs  runtime_ffi.rs  transfer_ffi.rs
rust/crates/peerbeam-platform/: Cargo.toml
rust/crates/peerbeam-platform/src/: lib.rs
rust/crates/peerbeam-reliability-fs/: Cargo.toml
rust/crates/peerbeam-reliability-fs/src/: lib.rs
rust/crates/peerbeam-storage-fs/: Cargo.toml
rust/crates/peerbeam-storage-fs/src/: lib.rs
rust/crates/peerbeam-telemetry/: Cargo.toml
rust/crates/peerbeam-telemetry/src/: lib.rs
rust/crates/peerbeam-transfer/: Cargo.toml
rust/crates/peerbeam-transfer-quic/: Cargo.toml
rust/crates/peerbeam-transfer-quic/src/: lib.rs  link.rs  tls.rs
rust/crates/peerbeam-transfer-quic/tests/: endpoints.rs  network.rs
rust/crates/peerbeam-transfer/src/: auth.rs  clipboard.rs  control.rs  folder.rs  lib.rs  peek.rs  protocol.rs  recover.rs  secure.rs  stream.rs
rust/crates/peerbeam-transfer/tests/: clipboard.rs  cooperative_pause.rs  folder.rs  folder_edge.rs  integrity.rs  largefile.rs  recovery.rs  regression.rs  resume.rs  safewrite.rs  secure.rs  stress.rs  transfer.rs
rust/crates/peerbeam-transfer/tests/common/: mod.rs
rust/crates/peerbeam-trust-fs/: Cargo.toml
rust/crates/peerbeam-trust-fs/src/: lib.rs
rust/scripts/: nettest.sh
scripts/: build-ffi.sh  package-android.sh  package-linux.sh  package-macos.sh  package-windows.ps1  set-version.sh
(+37 files in other folders)
