[workspace]
resolver = "2"
members = [
    "crates/peerbeam-domain",
    "crates/peerbeam-platform",
    "crates/peerbeam-config",
    "crates/peerbeam-telemetry",
    "crates/peerbeam-app",
    "crates/peerbeam-engine",
    "crates/peerbeam-discovery-udp",
    "crates/peerbeam-discovery-mdns",
    "crates/peerbeam-discovery-tailscale",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
authors = ["PeerBeam Contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/peerbeam/PeerBeam"

# Shared dependency versions. Individual crates opt in by name so the
# dependency graph stays explicit and auditable.
[workspace.dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"
dirs = "6"
hostname = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net", "time", "process", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
socket2 = { version = "0.5", features = ["all"] }
mdns-sd = "0.11"

# Internal crates
peerbeam-domain = { path = "crates/peerbeam-domain" }
peerbeam-platform = { path = "crates/peerbeam-platform" }
peerbeam-config = { path = "crates/peerbeam-config" }
peerbeam-telemetry = { path = "crates/peerbeam-telemetry" }
peerbeam-app = { path = "crates/peerbeam-app" }
