[workspace]
resolver = "2"
members = [
    "crates/peerbeam-domain",
    "crates/peerbeam-platform",
    "crates/peerbeam-config",
    "crates/peerbeam-telemetry",
    "crates/peerbeam-app",
    "crates/peerbeam-engine",
    "crates/peerbeam-discovery-udp",
    "crates/peerbeam-discovery-mdns",
    "crates/peerbeam-discovery-tailscale",
    "crates/peerbeam-storage-fs",
    "crates/peerbeam-transfer",
    "crates/peerbeam-transfer-quic",
    "crates/peerbeam-ffi",
    "crates/peerbeam-clipboard-mem",
    "crates/peerbeam-reliability-fs",
    "crates/peerbeam-crypto",
    "crates/peerbeam-trust-fs",
    "bins/peerbeam-cli",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
rust-version = "1.80"
authors = ["PeerBeam Contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/peerbeam/PeerBeam"

# Shared dependency versions. Individual crates opt in by name so the
# dependency graph stays explicit and auditable.
[workspace.dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"
dirs = "6"
hostname = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net", "time", "process", "io-util", "fs", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
socket2 = { version = "0.5", features = ["all"] }
mdns-sd = "0.11"
tempfile = "3"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
rand = "0.10"
hmac = "0.12"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging"] }
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }

# Internal crates
peerbeam-domain = { path = "crates/peerbeam-domain" }
peerbeam-platform = { path = "crates/peerbeam-platform" }
peerbeam-config = { path = "crates/peerbeam-config" }
peerbeam-telemetry = { path = "crates/peerbeam-telemetry" }
peerbeam-app = { path = "crates/peerbeam-app" }
