[package]
name = "peerbeam-discovery-mdns"
description = "mDNS/DNS-SD device discovery — an adapter implementing peerbeam-domain's DiscoveryProvider port."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
peerbeam-domain = { workspace = true }
mdns-sd = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
