[package]
name = "peerbeam-discovery-udp"
description = "LAN device discovery via UDP broadcast — an adapter implementing peerbeam-domain's DiscoveryProvider port."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
peerbeam-domain = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
socket2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
