[package]
name = "peerbeam-reliability-fs"
description = "Filesystem ReliabilityStore: SHA-256 checksums and on-disk transfer checkpoints for interrupted-transfer recovery."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
peerbeam-domain = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }
