[package]
name = "peerbeam-transfer"
description = "Streaming, chunked file transfer over a Link: progress, pause, cancel, retry — never loads a whole file into memory."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
peerbeam-domain = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
peerbeam-storage-fs = { path = "../peerbeam-storage-fs" }
peerbeam-reliability-fs = { path = "../peerbeam-reliability-fs" }
peerbeam-crypto = { path = "../peerbeam-crypto" }
peerbeam-trust-fs = { path = "../peerbeam-trust-fs" }
tokio = { workspace = true }
tempfile = { workspace = true }
