[package]
name = "peerbeam-trust-fs"
description = "Filesystem TrustStore: trust-on-first-use device fingerprint pinning, persisted as JSON."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
peerbeam-domain = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }
